--- a/scss/default-styles.scss
+++ b/scss/default-styles.scss
@@ -1,11 +1,90 @@
+/* Variables */
+$breakpoint-mobile: 600px;
+
+/* Global styles */
 img{
 	width: 100%;
 }
-body{
-	.body-container{
-		background: red;
-		max-width: 1200px;
-		margin: 0 auto;
-	}
+p{
+	font-size: 15px;
+}
+a.site-button {
+	border: 2px solid #414141;
+	padding: 4px 20px;
+	display: inline-block;
+	border-radius: 15px;
+	text-transform: uppercase;
+	color: #414141;
+	font-weight: bolder;
+	font-size: 16px;
+	letter-spacing: 1.5px;
+	transition: .5s all;
+}
+a.site-button:hover {
+	background: #414141;
+	color: #fff;
+	text-decoration: none;
+}
 
+#home-banner{
+	background-image: url('../images/1920x650.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	position: relative;
+	min-height: 650px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin-bottom: 20px;
+	@media screen and (max-width: $breakpoint-mobile){
+			background-image: url('../images/600x600.png');	
+		
+	}
+}
+.body-container{
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 20px;
+}
+#home-banner:before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #0000002e;
+	z-index:1;
+}
+.home-banner-content{
+	z-index:2;
+		*{
+			color: #fff;		
+		}
+		h1{
+
+			font-weight: bold;
+			font-size: 50px;
+		}
+}
+#column-sections{
+	max-width:1000px;
+	margin: 0 auto 20px auto;
+		.columns-padding {
+			text-align: center;
+			padding: 15px;
+			border: 1.5px solid #f5f5f5;
+			border-radius: 4px;
+		}
+		img:hover {
+			transform: scale(.9);
+		}
+
+		img {
+			margin-bottom: 10px;
+			transition: .5s all;
+		}
+		
 }
