--- a/css/default-styles.css
+++ b/css/default-styles.css
@@ -35,9 +35,6 @@ a.site-button:hover {
   align-items: center;
   text-align: center;
   margin-bottom: 20px; }
-  @media screen and (max-width: 600px) {
-    #home-banner {
-      background-image: url("../images/600x600.png"); } }
 
 .body-container {
   max-width: 1200px;
@@ -75,5 +72,9 @@ a.site-button:hover {
   #column-sections img {
     margin-bottom: 10px;
     transition: .5s all; }
+
+@media screen and (max-width: 991px) and (min-width: 320px) {
+  #home-banner {
+    background-image: url("../images/600x600.png") !important; } }
 
 /*# sourceMappingURL=default-styles.css.map */
