--- a/css/default-styles.css
+++ b/css/default-styles.css
@@ -1,5 +1,8 @@
 /* Variables */
 /* Global styles */
+.container-fluid {
+  padding: 0 !important; }
+
 img {
   width: 100%; }
 
@@ -73,8 +76,12 @@ a.site-button:hover {
     margin-bottom: 10px;
     transition: .5s all; }
 
-@media screen and (max-width: 991px) and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   #home-banner {
+    min-height: 300px;
     background-image: url("../images/600x600.png") !important; } }
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  #home-banner {
+    min-height: 450px; } }
 
 /*# sourceMappingURL=default-styles.css.map */
